# ComfyUI-WaLa

./: .gitignore  README.md  __init__.py  comfy-test.toml  index.html  install.py  prestartup_script.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
dev/: index.html
nodes/: __init__.py  nodes_export.py  nodes_inference.py  nodes_loader.py  nodes_preprocessing.py  utils.py
wala/: clip_mod.py  dataset_utils.py  latent_module.py  model_utils.py  mvdream_module.py  mvdream_utils.py
wala/diffusion_modules/: dwt.py  point_voxels.py  sparse_network.py
wala/diffusion_modules/modules/: __init__.py  ball_query.py  frustum.py  loss.py  pointnet.py  pvconv.py  voxelization.py
wala/diffusion_modules/modules/functional/: __init__.py  ball_query.py  devoxelization.py  grouping.py  interpolatation.py  sampling.py  voxelization.py
wala/experiments/utils/: wavelet_utils.py
wala/latent_model/: continous_diffusion_interface.py  latent_uvit_utils.py  quantize.py  wavelet_vq_model.py
wala/latent_model/diffusion_modules/: dwt.py  sparse_network.py
wala/mvdream/: camera_utils.py  model_zoo.py  trainer_old.py
wala/mvdream/ldm/models/diffusion/: ddim.py
wala/mvdream/ldm/modules/: attention.py
wala/mvdream/ldm/modules/diffusionmodules/: model.py  util.py
wala/mvdream/ldm/modules/encoders/: modules.py
workflows/: basic.json  depth.json
