[project]
name = "comfyui-wala"
version = "0.1.0"
description = "ComfyUI nodes for WaLa billion-parameter 3D generative model. Not very impressed with this one, TRELLIS2 is better. Might be interesting for multi-view"
authors = [{name = "ComfyUI-WaLa Contributors"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["comfyui", "3d-generation", "mesh", "depth-map", "single-view"]

dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/PozzettiAndrea/ComfyUI-WaLa"
Repository = "https://github.com/PozzettiAndrea/ComfyUI-WaLa"
Issues = "https://github.com/PozzettiAndrea/ComfyUI-WaLa/issues"

# ComfyUI Registry configuration
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "WaLa"
Icon = ""